7/27/2013
---------------------------
- KO Added support for loading tif images via GDAL (#488)
- KO Added support for zooming to a specific layer (#142)
- KO Switched the version to 1.9.x since we can't rely on a simple revision number any longer.
- KO Changed selected points and lines to drawing last to make them more visible (#495)

7/26/2013
---------------------------
- KO Added coordinate conversions to decimal degrees
- KO Added test suite for coordinates module
- KO Added the ability to view / edit point coordinates (#418)
- KO Implemented Jump to Coordinates (#505, #157)
- KO Fixed #479 (should be able to save a verdat with no boundaries)
- KO Fixed #475 (Should be able to create a new verdat from scratch)

7/25/2013
---------------------------
- KO Fixed XML layer loading bug (#481)
- KO Fixed error dialog incompatibility with 2.9.4.0
- KO Fixed error when triangulating on Windows in the exe version (#484)
- KO Fixed error when calling Zoom to Fit (#502)
- KO Fixed undo error after layer code refactoring (#504)

5/9/2013
---------------------------
- KO Fixed an issue introduced by the use of Projection class by adding a __call__ method
- KO Added testRunner.py to run all unit tests, along with RenderWindow unit tests

5/8/2013
---------------------------
- KO Renamed Transformer class to Projection and added projection function to fully wrap pyproj

5/3/2013
---------------------------
- KO Fixed an issue with how Layer_maanger detects raster and vector layers

5/2/2013
---------------------------
- KO Added setup.cfg so that `python setup_library.py install` installs to the correct dir.
- KO Changed line editing mode to allow point selection when shift is held down

4/14/2013
---------------------------
- KO Refactored layer rendering logic into a new class LayerRendererOpenGL
- KO Fixed #471 (Enable MapRoom to Edit Soundings in a .VERDAT)

4/12/2013
---------------------------