@@ -1,1 +1,16 @@
-DOGS  1, -62.242000,  12.775000,   1.000  2, -28.990000,  12.775000,   1.000  3, -28.990000,  30.645000,   1.000  4, -47.670000,  31.774000, 102.000  5, -53.501000,  36.662000,   1.000  6, -43.978000,  28.400000,   1.000  7, -37.164000,  25.446000,  60.000  8, -39.804000,  17.983000,   1.000  9, -44.109000,  22.204000,   1.000 10, -50.822000,  20.203000,  97.000 11, -34.911234,  29.293790,   1.000  0,   0.000,   0.000,   0.000 2 5 9
+DOGS
+  1, -62.242001, 12.775000, 1.000
+  2, -28.990000, 12.775000, 1.000
+  3, -28.990000, 30.645000, 1.000
+  4, -47.669998, 31.774000, 102.000
+  5, -53.500999, 36.661999, 1.000
+  6, -43.978001, 28.400000, 1.000
+  7, -37.164001, 25.445999, 60.000
+  8, -39.804001, 17.983000, 1.000
+  9, -44.109001, 22.204000, 1.000
+ 10, -50.821999, 20.202999, 97.000
+ 11, -34.911236, 29.293791, 1.000
+  0, 0.000000, 0.000000, 0.000
+2
+5
+9
